--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "axios": "^1.3.3",
     "bcrypt": "^5.1.0",
     "connect-mongo": "^4.6.0",
     "cookie-parser": "^1.4.5",
+    "dayjs": "^1.11.7",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "express-session": "^1.17.3",
+    "googleapis": "^111.0.0",
     "hbs": "^4.1.1",
     "mongoose": "^6.1.2",
     "morgan": "^1.10.0",
