--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-session": "^1.17.3",
     "googleapis": "^111.0.0",
     "hbs": "^4.1.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.1.2",
     "morgan": "^1.10.0",
     "serve-favicon": "^2.5.0"
